# AgentReadmeGen

./: .gitignore  Pipfile  README.md  analyzer.py  code_understanding_analyzer.py  config.py  example.env  file_info.py  main.py  pyproject.toml  readme_generator.py  repo_analyzer_agent.py  repo_analyzer_tools.py  repo_info.py
docs/api/classes/: analyzer.md  code_understanding_analyzer.md  config.md  main.md  readme_generator.md
docs/guides/: architecture.md
prompts/default/: 01-project-overview.md  01-project-purpose.md  02-components-tech.md  02-usage-instructions.md  03-architecture.SKIP.md  03-testing.md  04-api-interface.SKIP.md  04-final-readme.md  05-features.md  06-installation.md  07-usage.md  08-testing.md  09-final-refinement.md
src/: __init__.py  code_understanding_analyzer.py  config.py  main.py  readme_generator.py
src/analyzers/: __init__.py  base_analizer.py  java_analizer.py  javascript_analizer.py  python_analizer.py
src/utils/: __init__.py  file_utils.py  intermediate_file_manager.py  openai_utils.py  ranking_utils.py  readme_utils.py
